--- a/nginx_tool.yml
+++ b/nginx_tool.yml
@@ -1,6 +1,8 @@
----
 - hosts: all
-  become: yes
-  gather_facts: yes
-  roles:
-    - role_ansible
+  gather_facts: true
+  become: true
+  become_user: ubuntu
+  tasks:
+    # Your tasks here
+  vars:
+    ansible_ssh_private_key_file: /var/lib/jenkins/workspace/terraform_ansible_job/ninja.pem
