--- a/role_ansible/tasks/software.yml
+++ b/role_ansible/tasks/software.yml
@@ -1,66 +1,21 @@
----
-- name: Install software packages in Debian
-  apt:
-    update_cache: yes
+
+- name: Install or uninstall software packages
+  package:
     name: "{{ item }}"
-    state: present
+    state: "{{ software_package_state | default('present') }}"
   with_items: "{{ software_packages }}"
-  when: ansible_os_family == "Debian" #ubuntu
-   tags: 
-    - install
-    
-- name: Uninstall software packages in Debian
-  apt:
-    update_cache: yes
-    name: "{{ item }}"
-    state: absent
-  with_items: "{{ software_packages }}"
-  when: ansible_os_family == "Debian"
   tags: 
+    - install
     - uninstall
     - never
 
-
-- name: Start service if not started 
-  service:
+- name: Manage service state
+  systemd:
     name: "{{ item }}"
-    state: started
-  with_items: "{{ software_packages }}"
-  tags: started
-
-- name: Stop service if started 
-  ansible.builtin.service:
-    name: "{{ item }}"
-    state: stopped
-  with_items: "{{ software_packages }}"
-  tags: stopped
-
-- name: Restart service, in all cases
-  ansible.builtin.service:
-    name: "{{ item }}"
-    state: restarted
-  with_items: "{{ software_packages }}"
-  tags: restarted
-
-- name: Install software packages in RedHat
-  yum:
-    update_cache: yes
-    name: "{{ item }}"
-    state: present
-  with_items: "{{ software_packages }}"
-  when: ansible_os_family == "RedHat"
+    state: "{{ software_service_state }}"
+  with_items: "{{ software_services }}"
+  when: software_services is defined
   tags: 
-    - install
-   
-
-
-- name: Uninstall software packages in RedHat
-  yum:
-    update_cache: yes
-    name: "{{ item }}"
-    state: absent
-  with_items: "{{ software_packages }}"
-  when: ansible_os_family == "RedHat"
-  tags: 
-    - uninstall
-    - never
+    - started
+    - stopped
+    - restarted
