--- a/role_ansible/vars/main.yml
+++ b/role_ansible/vars/main.yml
@@ -1,8 +1,3 @@
 ---
 # vars file for role_ansible
-software_packages:
-  - nginx
-
-
-page_title: "Tool Evaluation"
-page_description: "Nginx Creator Igor Sysoev"
+package_name:  nginx 
